--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "chai": "^4.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "joi": "^14.3.1",
+    "joi-date-extensions": "^1.2.0",
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "uuid": "^3.3.2"
