--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: node_js
 node_js: - "stable"
 script: npm test
+after_success:
+  - npm run coveralls
+  - nyc report --reporter=text-lcov | coveralls
