--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
-node_js: - "stable"
-script: npm test
+node_js:
+  - "stable"
+script:
+  - npm test
 after_success:
   - npm run coveralls
+  - codeclimate-test-reporter < ./coverage/lcov.info
   - nyc report --reporter=text-lcov | coveralls
