--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "nyc --report=html --reporter=text mocha ./server/tests --timeout 1200 --exit",
     "dev": "nodemon app.js",
     "start": "nodemon app.js",
-    "coverage": "nyc report --reporter=text mocha ./server/test"
+    "coverage": "nyc report --reporter=text mocha ./server/test | coveralls"
   },
   "repository": {
     "type": "git",
