--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,9 @@ after_success:
   - npm run coveralls
   - codeclimate-test-reporter < ./coverage/lcov.info
   - nyc report --reporter=text-lcov | coveralls
+addons:
+  code_climate:
+    repo_token:
+      secure: "192fbac2adcd9e1f62de0e9abd8be1b9d807e124b6d899ea62f31d7f86e42531"
+               
+
