--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc --report=html --reporter=text mocha ./server/tests --timeout 1200 --exit",
     "dev": "nodemon app.js",
-    "start": "node app.js",
+    "start": "nodemon --exec babel-node app.js",
     "coverage": "nyc report --reporter=text mocha ./server/test | coveralls"
   },
   "repository": {
