--- a/package.json
+++ b/package.json
@@ -28,20 +28,24 @@
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
+    "env": "0.0.2",
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "joi-date-extensions": "^1.2.0",
+    "make-runnable": "^1.3.6",
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "nyc": "^13.1.0",
+    "pg": "^7.8.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
-    "eslint": "^3.0.1",
+    "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^1.10.3",
+    "eslint-plugin-import": "^2.15.0",
     "nodemon": "^1.18.9"
   }
 }
