--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
+    "jsonwebtoken": "^8.4.0",
     "nodemon": "^1.18.9"
   }
 }
