--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "morgan": "^1.9.1",
     "nyc": "^13.1.0",
     "pg": "^7.8.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "jsonwebtoken": "^8.4.0",
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
-    "jsonwebtoken": "^8.4.0",
     "nodemon": "^1.18.9"
   }
 }
