--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "joi-date-extensions": "^1.2.0",
+    "jsonwebtoken": "^8.4.0",
     "make-runnable": "^1.3.6",
     "mocha": "^5.2.0",
     "morgan": "^1.9.1",
     "nyc": "^13.1.0",
     "pg": "^7.8.0",
-    "uuid": "^3.3.2",
-    "jsonwebtoken": "^8.4.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
