--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/placideirandora/questioner#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -35,18 +36,25 @@
     "joi": "^14.3.1",
     "joi-date-extensions": "^1.2.0",
     "jsonwebtoken": "^8.4.0",
-    "make-runnable": "^1.3.6",
     "mocha": "^5.2.0",
+    "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "nyc": "^13.1.0",
     "pg": "^7.8.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "codeclimate-test-reporter": "^0.5.1",
     "coveralls": "^3.0.2",
     "eslint": "^5.12.1",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.15.0",
-    "nodemon": "^1.18.9"
+    "eslint-plugin-mocha": "^5.2.1",
+    "istanbul": "^0.4.5",
+    "make-runnable": "^1.3.6",
+    "nodemon": "^1.18.9",
+    "prettier-eslint": "^8.8.2",
+    "supertest": "^3.4.2"
   }
 }
