[chore] making tests functional

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DB_HOST = 'localhost'
 DB_USER = 'postgres'
 DB_NAME = 'questioner'
+DB_NAME_TEST = 'questioner-test'
 DB_PORT = 5000
 DB_PASSWORD = '1234567890'
 
