--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc --report=html --reporter=text mocha --require babel-polyfill --require babel-register  ./server/tests --timeout 1200 --exit",
     "dev": "nodemon app.js",
-    "start": "babel-node app.js",
+    "start": "nodemon --exec babel-node app.js",
     "coverage": "nyc report --reporter=text mocha ./server/test | coveralls"
   },
   "repository": {
@@ -33,14 +33,17 @@
     "ejs": "^2.6.1",
     "env": "0.0.2",
     "express": "^4.16.4",
+    "jasmine": "^3.3.1",
     "joi": "^14.3.1",
     "joi-date-extensions": "^1.2.0",
     "jsonwebtoken": "^8.4.0",
     "mocha": "^5.2.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nyc": "^13.1.0",
     "pg": "^7.8.0",
+    "request": "^2.88.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-mocha": "^5.2.1",
     "istanbul": "^0.4.5",
     "make-runnable": "^1.3.6",
