--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc --report=html --reporter=text mocha ./server/tests --timeout 1200 --exit",
     "dev": "nodemon app.js",
-    "start": "nodemon app.js",
+    "start": "nodemon --exec babel-node app.js",
     "coverage": "nyc report --reporter=text mocha ./server/test | coveralls"
   },
   "repository": {
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/placideirandora/questioner#readme",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
