--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "​Questioner​ helps the meetup organizer prioritize questions to be answered.",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --report=html --reporter=text mocha ./server/tests --timeout 1200 --exit",
+    "test": "nyc --report=html --reporter=text mocha --require babel-polyfill --require babel-register ./server/tests --timeout 1200 --exit",
     "dev": "nodemon app.js",
     "start": "nodemon --exec babel-node app.js",
-    "coverage": "nyc report --reporter=text mocha ./server/test | coveralls"
+    "coverage": "nyc report --reporter=text mocha  ./server/test | coveralls"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/placideirandora/questioner#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
