--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "nyc --report=html --reporter=text mocha --require babel-polyfill --require babel-register ./server/tests --timeout 1200 --exit",
     "dev": "nodemon app.js",
     "start": "nodemon --exec babel-node app.js",
-    "coverage": "nyc report --reporter=text mocha  ./server/test | coveralls"
+    "coverage": "nyc report --reporter=text mocha  ./server/test | coveralls",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
