--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "nyc --report=html --reporter=text mocha --require babel-polyfill --require babel-register ./server/tests --timeout 1200 --exit",
     "dev": "nodemon app.js",
-    "start": "nodemon --exec babel-node app.js",
+    "start": "babel-node app.js",
     "coverage": "nyc report --reporter=text mocha  ./server/test | coveralls",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
