[chore] configured for test functionality

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "​Questioner​ helps the meetup organizer prioritize questions to be answered.",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha --require babel-polyfill --require babel-register  ./server/tests --timeout 1200 --exit",
+    "test": "cross-env NODE_ENV=test nyc --report=html --reporter=text mocha --require babel-polyfill --require babel-register  ./server/tests --timeout 1200 --exit",
     "dev": "nodemon app.js",
     "start": "babel-node app.js",
-    "coverage": "nyc report --reporter=text mocha ./server/test | coveralls"
+    "coverage": "nyc report --reporter=text mocha ./server/test | coveralls",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
