--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 services:
   - postgresql
 before_script:
-  - psql -c 'create database questioner;' -U postgres
+  - "psql -c 'create database questioner;' -U postgres"
 script:
   - npm test
 after_success:
