[chore] reconfigure database for tests to pass

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
   - "stable"
-services:
-  - postgresql
 before_script:
-  - "psql -c 'create database questioner;' -U postgres"
+  - psql -c 'create database travis_ci_test;' -U postgres
+  services:
+  - postgresql
 script:
   - npm test
 after_success:
