[chore] reconfigure database for tests to pass

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,32 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=8c7f17a08574a65e197a427549e583d1d25c1d7449790bd1109a972ca645b672
+    - DATABASE_TEST=postgres://postgres@localhost:5432/questionertest
 language: node_js
 node_js:
   - "stable"
-before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
+  addons:
+  code_climate:
+    repo_token: oRblQGlTExDemtJJHpCpzQ
+  cache:
+  directories:
+    - "node_modules"
   services:
-  - postgresql
+    -postgresql
+  before_script:
+  - psql -c 'CREATE DATABASE questionertest;' -U postgres
+  -NODE_ENV=TEST npm run
+   - npm install --save-dev coveralls
+  - npm install --save-dev nyc
+    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
 script:
   - npm test
+  - bundle exec rspec
 after_success:
-  - npm run coveralls
-  - codeclimate-test-reporter < ./coverage/lcov.info
- 
+  -npm run coveralls
 
-               
-
+  after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
