[chore] configure and load environment variable for tests to pass

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 env:
   global:
-    - DATABASE_TEST=postgres://postgres@localhost:5000/questionertest
+    - DATABASE_TEST=postgres://postgres@localhost:5000/questioner
 language: node_js
 node_js:
   - "stable"
